# cvxcli

./: .gitignore  .rhiza.env  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
.rhiza/: history  template.yml
src/cvxcli/: __init__.py  smallest_eigenvalue.py  weather.py
tests/: test_smallest_eigenvalue.py  test_weather.py
