[project]
name = "cvxcli"
version = "0.0.0"
description = "Simple command line app demo"
readme = "README.md"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fire>=0.7.0",
    "requests>=2.32.3",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxcli"

[dependency-groups]
dev = [
    "mock",
]

[project.scripts]
weather = "cvxcli.weather:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxcli"]
