[project]
name = "cvxcli"
version = "1.0.0"
description = "Simple command line app demo"
readme = "README.md"
authors = [{name = "Thomas Schmelzer", email = "thomas.schmelzer@gmail.com"}]
requires-python = ">=3.11"
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fire>=0.7.0",
    "requests>=2.32.3",
]

[project.urls]
repository = "https://github.com/cvxgrp/cvxcli"

[dependency-groups]
dev = [
    "mock",
    "pandas>=2.3",
    "numpy>=2.4",
    "plotly>=6.5",
    "marimo>=0.18.4",
]

[project.scripts]
weather = "cvxcli.weather:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cvxcli"]

[tool.deptry.package_module_name_map]
fire = "fire"
requests = "requests"
mock = "mock"
pandas = "pandas"
numpy = "numpy"
plotly = "plotly"
marimo = "marimo"
